--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
-body{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
 .container{
-    /* border: 2px solid red; */
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 0 30px;
-    padding:15px 0;
-    /* box-shadow: 2px 2px 2px gray; */
+    padding:40px;
+    box-shadow: 0px 0px 6px gray;
 }
 .container .item1:nth-child(1){
     gap:0.3rem;
 } 
 .container .item1:nth-child(1) img{
     width: 5rem;
+    margin-left: 30px;
 }
 .container .item1:nth-child(1) span{
     font-size: 1.6rem;
@@ -25,6 +25,8 @@ body{
     font-weight: 300;
 }
 .item1{
+    padding: 0.4rem;
+    /* border: 2px solid red; */
     display: flex;
     align-items: center;
 }
@@ -39,6 +41,7 @@ body{
 .container .item1:nth-child(2) a > img{
     width:30px; 
     border-radius: 50px;
+    margin-right: 30px;
 }
 .container2{
     padding:15px;
@@ -52,46 +55,61 @@ body{
     color: white;
 }
 .grid-container{
+    /* border: 2px solid red; */
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows:360px;
+    /* overflow: hidden;  to put text or image on top*/
 }
 .grid-item1{
-    align-items: center;
-    padding:3rem 4rem;
-    /* margin-top: ; */
-    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    align-self: center;
+    padding-left: 30px;
+    gap: 1rem;
+    /* border: 2px solid green; */
+    /* padding:3rem; */
+    /* margin-top: 1rem;     */
 }
 .grid-container .grid-item1 h1{
-    font-size: 2.6rem;
+    max-width: 23.5ch;
+    /* gap: 1rem; */
+    /* border: 2px solid red; */
+    font-size: 2.7rem;
     font-family: 'Roboto', sans-serif;
     font-weight:100;
 }
 .grid-container .grid-item1 > p{
+    max-width: 50ch;
+    padding: 1rem;
     font-family: 'Roboto', sans-serif;
     font-size: 1.3rem;
     color: rgb(61,32,32);
 }
-.grid-item2 img{
-    width:700px;
-    height:360px;
+.grid-item2 {
+    background-image: url(images/firstpics1.jpg);
+    background-position:center;
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .container3{
     background-color: rgb(66,133,244);
-    padding: 3rem 3rem;
+    padding: 5rem 5rem;
 }
 .container3 h2{
     font-size: 1.8rem;
     color: white;
     font-family: 'Roboto', sans-serif;
     /* border: 2px solid red; */
-    margin-top: -10px;
-    margin-left:45px;
+    padding:20px 0;
+    margin-left:6.5rem;
     font-weight: 100;
 
 }
 .box-item{
-    padding: 5px 50px;
+    /* border: 2px solid red; */
+    padding: 25px 100px;
     gap: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -104,6 +122,7 @@ body{
     padding: 1rem;
     border: 2px solid white;
     background-color: white;
+    box-shadow: 0 0 5px 0 gray;
 }
 .box-item .box div img{
     width: 3rem;
@@ -120,28 +139,30 @@ body{
     display: block;
 }
 .fa-arrow-right{
-    /* transform: translate(200px); */
     display:inline-block;
     width: 100%;
     font-size: 1.3rem;
     color: rgb(255,119,0);
     text-align: end;
-    /* background-color: yellow; */
-    /* margin-bottom: -30px; */
 }
 .container5{
-    background-color: aliceblue;
-    margin: 5rem 5rem;
-    display: grid;
-    /* grid-template-columns:2fr ; */
-    /* grid-template-rows: 200px 200px 200px ; */
+    /* border: 2px solid red; */
+    margin: 5rem 5rem  1rem 5rem;
 }
 .box2{
+    height: 50%;
     margin: 10px;
-    box-shadow:0.5px 0.5px gray;
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    background-color: white;
+    grid-template-columns: 1fr;
+}
+.box2imag {
+    display: flex;
+    margin: 10px 0px;
+    background-color: #f2f2f2;
+    box-shadow: 2px 2px 3px grey;
+}
+.lastpics{
+    /* display: flex; */
 }
 .container5 > h1{
     /* border: 2px solid red; */
@@ -152,51 +173,55 @@ body{
     font-family: 'Roboto', sans-serif;
     margin-top:-50px;
 }
-.container5 .box2 h4{
-    font-size:1rem;
+.container5 .box2w1 h4{
+    font-size:1.3rem;
     font-family: 'Roboto', sans-serif;
     color: rgb(61,32,32);
-    font-weight: bold;
-    margin-left: 30px;
+    font-weight:300;
+    padding: 20px;
 }
 
-.container5 .box2 p{
+.container5 .box2w1 p{
+    line-height: 25px;
     font-size:1rem;
     font-family: 'Roboto', sans-serif;
     color: rgb(61,32,32);
-    font-weight: 100;
-    margin: 30px;
+    /* font-weight: 100; */
+    padding:20px  30px 20px 30px;
+    
+
     
 }
 .container6{
-    margin: 5rem  5rem;
     /* border: 2px solid red; */
-
+    margin:0 5rem 2rem 5rem;
 }
-.container6 h1{
-    font-weight: 100;
+.container6 h2{
+    font-weight: 400;
     font-family: 'Roboto', sans-serif;
     color: (32,32,32);
+    padding: 10px;
 }
 .container6 > p{
     font-family: 'Roboto', sans-serif;
     color: rgb(61,32,32);
-    font-size:1.15rem;
+    font-size:1rem;
+    padding:10px 10px 30px 0;
 }
     
 
 .container6 .cards {
-    /* border: 2px solid red; */
+    /* border: 2px solid red; */ 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows:150px;
+    /* grid-template-rows:150px; */
     gap: 10px;
 }
 .card1{
-    border: 1px solid gray;
+    height: 150px;
     text-align: center;
     padding:10px;
-    box-shadow: 1px 1px gray;
+    box-shadow: 1px 1px 4px gray;
     border-radius:5px;
 }
 .cards .card1:nth-child(1) img{
@@ -217,7 +242,7 @@ body{
 .container7 >h3{
     font-family: 'Roboto', sans-serif;
     color: rgb(74,74,85);
-    font-weight: 100;
+    font-weight: 400;
     font-size:1.5rem;
     margin-left: 4rem;
     padding:10px;
@@ -233,5 +258,136 @@ body{
     text-align: center;
     padding:10px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:900px) {
+    .item1{
+            margin-left: 10px;
+    }
+    .email{
+        display: none; 
+    }
+    .container2{
+        width: 100%;
+        font-size: 0.9rem;
+    }
+    .grid-container{
+        display: block;
+    }
+    .grid-container .grid-item2 {
+            display: none;
+    }
+    .grid-item1{
+        align-items: start;
+    }
+    .box3 .box-item1 h1{
+        border: 2px solid red;
+        font-size:1.5rem;
+        font-weight: 100;
+    }
+    .box3 .box-item1 > p{
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.3rem;
+        padding: 1rem;
+    }
+    .box-item1{
+        align-items: center;
+        padding:1rem 1rem;
+    }
+    .box-item{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 5px 10px;
+        gap: 10px;
+    }
+    .container3 h2{
+        margin:10px 0  10px 10px;
+        font-size:1.4rem;
+        /* padding:10px 10px; */
+    }
+    .container5 > h1{ 
+        font-size:1.2rem;
+        font-weight:500;
+        padding: 5px;
+    }
+    .box2{
+        display: flex;
+        flex-direction:column;
+        /* width: 100%; */
+        /* border: 2px solid red; */
+    }
+    .container5{
+        margin: 0px;
+        transform: translateY(60px);
+    }
+    .box2imag{
+    
+    }
+    .lastpics{
+        display: none;
+    }
+    .box2w1{
+        /* width: 100%; */
+    }
+    .container6{
+            margin: 0 ;
+    }
+    .container6 .cards{
+        /* width: 100%; */
+        display: flex;
+        flex-wrap: wrap ;
+    }
+    .card1{
+        width: 100%;
+    }
+    .container6{
+        transform: translateY(50px);
+    }
+    .container6 > p{
+        line-height: 22px;
+        padding:10px 20px;
+    }
+    .container6 h2{
+        /* border: 2px solid red; */
+            padding-left: 20px;
+    }
+    .container7{
+        transform: translateY(50px);
+    }
+    .last-card{
+        display: block;
+    }
+    .last-card1{
+        justify-content: center;
+        display:flex;
+        gap: 1.5rem;
+        /* flex-direction:column; */
+    }
+    .container7 >h3{
+        padding:20px 0;
+        /* margin: 0 10px; */
+        font-size: 1.3rem;
+        font-weight:400;
+    }
+}
+@media screen and (min-width:300px) {
+    .container{
+        padding:10px;
+    }
+    .container3{
+        padding: 0;
+    }
+}
+
 
 
